--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,6 @@ dependencies:
   cupertino_icons: ^1.0.0
   webview_flutter: ^1.0.7
   provider: ^4.3.2+3
-  flutter_svg: ^0.17.4
   flutter_switch: ^0.0.2
 
 dev_dependencies:
@@ -65,6 +64,9 @@ flutter:
     - family: Lato
       fonts:
         - asset: assets/fonts/Lato-Regular.ttf
+    - family: CustomIcons
+      fonts:
+        - asset: assets/icons/CustomIcons.ttf        
     # - family: Trajan Pro
     #   fonts:
     #     - asset: fonts/TrajanPro.ttf
