--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   webview_flutter: ^1.0.7
   provider: ^4.3.2+3
-  flutter_switch: ^0.0.2
+  menu_button: ^1.2.1
 
 dev_dependencies:
   flutter_test:
