--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,9 +64,9 @@ flutter:
     - family: Lato
       fonts:
         - asset: assets/fonts/Lato-Regular.ttf
-    - family: CustomIcons
+    - family: MyFlutterApp
       fonts:
-        - asset: assets/icons/CustomIcons.ttf        
+        - asset: assets/icons/MyFlutterApp.ttf        
     # - family: Trajan Pro
     #   fonts:
     #     - asset: fonts/TrajanPro.ttf
