--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   webview_flutter: ^1.0.7
   provider: ^4.3.2+3
   menu_button: ^1.2.1
+  flutter_typeahead: "<=1.9.1"
+  flutter_form_builder: ^4.2.0
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +68,7 @@ flutter:
         - asset: assets/fonts/Lato-Regular.ttf
     - family: CustomIcons
       fonts:
-        - asset: assets/icons/CustomIcons.ttf        
+        - asset: assets/icons/CustomIcons.ttf
     # - family: Trajan Pro
     #   fonts:
     #     - asset: fonts/TrajanPro.ttf
