--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ flutter:
     - family: Lato
       fonts:
         - asset: assets/fonts/Lato-Regular.ttf
-    - family: MyFlutterApp
+    - family: CustomIcons
       fonts:
         - asset: assets/icons/CustomIcons.ttf
     # - family: Trajan Pro
