--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   menu_button: ^1.2.1
   flutter_typeahead: "<=1.9.1"
   flutter_form_builder: ^4.2.0
+  flutter_screenutil: ^4.0.2+3
 
 dev_dependencies:
   lint: ^1.3.0
