--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,12 @@ dependencies:
   flutter_typeahead: "<=1.9.1"
   flutter_form_builder: ^4.2.0
   flutter_screenutil: ^4.0.2+3
+  json_annotation: ^3.0.0
 
 dev_dependencies:
   lint: ^1.3.0
+  build_runner: ^1.0.0
+  json_serializable: ^3.2.0
   flutter_test:
     sdk: flutter
 
