--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_form_builder: ^4.2.0
   flutter_screenutil: ^4.0.2+3
   json_annotation: ^3.0.0
+  firebase_core: "0.7.0"
+  firebase_auth: "^0.20.0+1"
 
 dev_dependencies:
   lint: ^1.3.0
