--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   webview_flutter: ^1.0.7
-  provider: ^4.3.2+3
   menu_button: ^1.2.1
   flutter_typeahead: "<=1.9.1"
   flutter_form_builder: ^4.2.0
@@ -36,10 +35,15 @@ dependencies:
   json_annotation: ^3.0.0
   firebase_core: "0.7.0"
   firebase_auth: "^0.20.0+1"
+  hive: ^1.4.4+1
+  hive_flutter: ^0.3.1
+  flutter_riverpod: ^0.12.2
+  flutter_secure_storage: ^3.3.5
 
 dev_dependencies:
   lint: ^1.3.0
-  build_runner: ^1.0.0
+  hive_generator: ^0.8.2
+  build_runner: ^1.11.0
   json_serializable: ^3.2.0
   flutter_test:
     sdk: flutter
