--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   injectable: ^1.0.7
   json_annotation: ^3.0.0
   freezed_annotation: ^0.12.0
+  dartz: ^0.9.2
   path_provider: ^1.6.27
   webview_flutter: ^1.0.7
   firebase_auth: ^0.20.0+1
