--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   json_annotation: ^3.0.0
   freezed_annotation: ^0.12.0
   dartz: ^0.9.2
+  dio: ^3.0.10
   path_provider: ^1.6.27
   webview_flutter: ^1.0.7
   firebase_auth: ^0.20.0+1
