Added readme to hidden files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     ".dart_tool": true,
     "build": true,
     ".vscode": true,
-    "pubspec.lock": true
+    "pubspec.lock": true,
+    "README.md": true
   },
 }
