--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: supplier_mobile
-description: A new Flutter project.
+description: Mobile Supreme & Palace Bot.
 publish_to: "none"
 version: 1.0.0+1
 
@@ -15,7 +15,7 @@ dependencies:
   auto_route: ^0.6.9
   get_it: ^5.0.6
   injectable: ^1.0.7
-  json_annotation: ^3.0.0
+  json_annotation: ^3.1.1
   freezed_annotation: ^0.12.0
   dartz: ^0.9.2
   dio: ^3.0.10
@@ -30,9 +30,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.11.0
+  build_runner: ^1.11.1
   freezed: ^0.12.7
-  json_serializable: ^3.2.0
+  json_serializable: ^3.5.1
   injectable_generator: ^1.0.7
   auto_route_generator: ^0.6.10
   lint: ^1.3.0
