--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,10 @@ dependencies:
   dio: ^3.0.10
   path_provider: ^1.6.27
   webview_flutter: ^1.0.7
+  firebase_core: ^0.7.0
   firebase_auth: ^0.20.0+1
-  firebase_core: 0.7.0
+  cloud_functions: ^0.9.0
+  cloud_firestore: ^0.16.0
   flutter_form_builder: ^4.2.0
   flutter_typeahead: <=1.9.1
   menu_button: ^1.2.1
