Better linting rules

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,9 @@ linter:
     always_specify_types: false
 
 analyzer:
+  strong-mode:
+    implicit-casts: false
+    implicit-dynamic: false
   errors:
     missing_required_param: error
     parameter_assignments: error
