Profiles form validation & data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,15 @@
 {
   "files.exclude": {
-    "**/*.freezed.dart": true,
-    "**/*.g.dart": true,
-    "**/.gitkeep": true,
-    ".flutter-plugins*": true,
-    ".packages": true,
-    ".metadata": true,
-    ".dart_tool": true,
-    "build": true,
-    ".vscode": true,
-    "pubspec.lock": true,
-    "README.md": true
+    "**/*.freezed.dart": false,
+    "**/*.g.dart": false,
+    "**/.gitkeep": false,
+    ".flutter-plugins*": false,
+    ".packages": false,
+    ".metadata": false,
+    ".dart_tool": false,
+    "build": false,
+    ".vscode": false,
+    "pubspec.lock": false,
+    "README.md": false
   },
 }
