--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,34 +9,34 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  flutter_bloc: ^6.1.1
-  hydrated_bloc: ^6.1.0
   auto_route: ^0.6.9
+  cloud_firestore: ^0.16.0
+  cloud_functions: ^0.9.0
+  dartz: ^0.9.2
+  dio: ^3.0.10
+  firebase_auth: ^0.20.0+1
+  firebase_core: ^0.7.0
+  flutter_bloc: ^6.1.1
+  flutter_form_builder: ^4.2.0
+  flutter_hooks: ^0.15.0
+  flutter_typeahead: <=1.9.1
+  freezed_annotation: ^0.12.0
   get_it: ^5.0.6
+  hydrated_bloc: ^6.1.0
   injectable: ^1.0.7
   json_annotation: ^3.1.1
-  freezed_annotation: ^0.12.0
-  dartz: ^0.9.2
-  flutter_hooks: ^0.15.0
-  dio: ^3.0.10
   path_provider: ^1.6.27
+  rxdart: ^0.25.0
   webview_flutter: ^1.0.7
-  firebase_core: ^0.7.0
-  firebase_auth: ^0.20.0+1
-  cloud_functions: ^0.9.0
-  cloud_firestore: ^0.16.0
-  flutter_form_builder: ^4.2.0
-  flutter_typeahead: <=1.9.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  auto_route_generator: ^0.6.10
   build_runner: ^1.11.1
   freezed: ^0.12.7
-  json_serializable: ^3.5.1
   injectable_generator: ^1.0.7
-  auto_route_generator: ^0.6.10
+  json_serializable: ^3.5.1
   lint: ^1.3.0
 
 flutter:
