--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path_provider: ^1.6.27
   rxdart: ^0.25.0
   webview_flutter: ^1.0.7
+  jiffy: ^3.0.1
 
 dev_dependencies:
   flutter_test:
