--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   rxdart: ^0.25.0
   webview_flutter: ^1.0.7
   jiffy: ^3.0.1
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
