--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animations: ^1.1.2
   auto_route: ^0.6.9
   cloud_firestore: ^0.16.0
   cloud_functions: ^0.9.0
@@ -24,12 +25,12 @@ dependencies:
   get_it: ^5.0.6
   hydrated_bloc: ^6.1.0
   injectable: ^1.0.7
+  jiffy: ^3.0.1
   json_annotation: ^3.1.1
   path_provider: ^1.6.27
   rxdart: ^0.25.0
-  webview_flutter: ^1.0.7
-  jiffy: ^3.0.1
   url_launcher: ^5.7.10
+  webview_flutter: ^1.0.7
 
 dev_dependencies:
   flutter_test:
