--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   path_provider: ^1.6.27
   rxdart: ^0.25.0
   url_launcher: ^5.7.10
+  uuid: ^2.2.2
   webview_flutter: ^1.0.7
 
 dev_dependencies:
