--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,21 @@
 {
   "files.exclude": {
-    "**/.git": false,
-    "**/.svn": false,
-    "**/.hg": false,
-    "**/CVS": false,
-    "**/.DS_Store": false,
-    "**/*.freezed.dart": false,
-    "**/*.g.dart": false,
-    "**/.gitkeep": false,
-    ".flutter-plugins*": false,
-    ".packages": false,
-    ".metadata": false,
-    ".dart_tool": false,
-    "build": false,
-    ".vscode": false,
-    "pubspec.lock": false,
-    "README.md": false
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/*.freezed.dart": true,
+    "**/*.g.dart": true,
+    "**/.gitkeep": true,
+    ".flutter-plugins*": true,
+    ".packages": true,
+    ".metadata": true,
+    ".dart_tool": true,
+    "build": true,
+    ".vscode": true,
+    "pubspec.lock": true,
+    "README.md": true
   },
   "explorerExclude.backup": null,
 }
