--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
+        android:allowBackup="false"
+        android:fullBackupContent="false"
         android:label="supplier_mobile"
         android:icon="@mipmap/ic_launcher">
         <activity
