--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,11 @@ dependencies:
   flutter_bloc: ^6.1.1
   flutter_form_builder: ^4.2.0
   flutter_hooks: ^0.15.0
+  flutter_secure_storage: ^3.3.5
   flutter_typeahead: <=1.9.1
   freezed_annotation: ^0.12.0
   get_it: ^5.0.6
+  hive: ^1.4.4+1
   hydrated_bloc: ^6.1.0
   injectable: ^1.0.7
   jiffy: ^3.0.1
