--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,18 @@
 name: supplier_mobile
-description: Mobile Supreme & Palace Bot.
+description: Supreme & Palace Bot.
 publish_to: "none"
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.8.0 <3.0.0"
+
+flutter_icons:
+  image_path_android: "assets/icons/launcher.png"
+  image_path_ios: "assets/icons/launcher.png"
+  android: true
+  ios: true
+  adaptive_icon_foreground: "assets/icons/launcher_foreground.png"
+  adaptive_icon_background: "#1B191C"
 
 dependencies:
   flutter:
@@ -41,6 +49,7 @@ dev_dependencies:
   auto_route_generator: ^0.6.10
   build_runner: ^1.11.1
   freezed: ^0.12.7
+  flutter_launcher_icons: ^0.8.1
   injectable_generator: ^1.0.7
   json_serializable: ^3.5.1
   lint: ^1.3.0
