--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,8 +38,7 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "io.supplierbots.supplier"
+        applicationId "io.supplierbot.mobile"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
