--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   rxdart: ^0.25.0
   url_launcher: ^5.7.10
   uuid: ^2.2.2
-  webview_flutter: ^1.0.7
+  flutter_inappwebview: ^5.1.0+4
+
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,12 @@ dev_dependencies:
   injectable_generator: ^1.0.7
   json_serializable: ^3.5.1
   lint: ^1.3.0
+
+dependency_overrides:
+  intl: ^0.17.0
+  date_range_picker:
+    git:
+      url: https://github.com/ingmferrer/date_range_picker.git
 
 flutter:
   uses-material-design: true
