--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: supplier_mobile
 description: Supreme & Palace Bot.
 publish_to: "none"
-version: 0.6.0+6
+version: 0.6.1+7
 
 environment:
   sdk: ">=2.8.0 <3.0.0"
@@ -41,8 +41,10 @@ dependencies:
   rxdart: ^0.25.0
   url_launcher: ^5.7.10
   uuid: ^2.2.2
-  flutter_inappwebview: ^5.1.0+4
-
+  flutter_inappwebview:
+    git:
+      url: https://github.com/SupplierBots/flutter_inappwebview.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
