--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: supplier_mobile
 description: Supreme & Palace Bot.
 publish_to: "none"
-version: 0.6.2+8
+version: 0.6.4+10
 
 environment:
   sdk: ">=2.8.0 <3.0.0"
@@ -17,6 +17,10 @@ flutter_icons:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_inappwebview:
+    git:
+      url: https://github.com/SupplierBots/flutter_inappwebview.git
+      ref: master
   animations: ^1.1.2
   auto_route: ^0.6.9
   cloud_firestore: ^0.16.0
@@ -37,22 +41,20 @@ dependencies:
   injectable: ^1.0.7
   jiffy: ^3.0.1
   json_annotation: ^3.1.1
+  package_info: ^2.0.0
   path_provider: ^1.6.27
   rxdart: ^0.25.0
   url_launcher: ^5.7.10
   uuid: ^2.2.2
-  flutter_inappwebview:
-    git:
-      url: https://github.com/SupplierBots/flutter_inappwebview.git
-      ref: master
+  version: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   auto_route_generator: ^0.6.10
   build_runner: ^1.11.1
-  freezed: ^0.12.7
   flutter_launcher_icons: ^0.8.1
+  freezed: ^0.12.7
   injectable_generator: ^1.0.7
   json_serializable: ^3.5.1
   lint: ^1.3.0
