--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: supplier_mobile
 description: Supreme & Palace Bot.
 publish_to: "none"
-version: 0.8.0+14
+version: 0.8.1+15
 
 environment:
   sdk: ">=2.8.0 <3.0.0"
@@ -26,6 +26,7 @@ dependencies:
   cloud_firestore: ^0.16.0
   cloud_functions: ^0.9.0
   dartz: ^0.9.2
+  device_info: ^2.0.0
   dio: ^3.0.10
   firebase_auth: ^0.20.0+1
   firebase_core: ^0.7.0
