--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,7 @@ flutter:
 
   assets:
     - assets/images/Supreme.png
-    - assets/images/Palace.png
+    - assets/images/SupremeGrey.png
     - assets/images/Captcha.png
     - assets/javascript/supremeInject.js
     - assets/javascript/googleLogin.js
